--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,13 @@ rvm:
   - 2.2.4
   - 2.3.0
 
+gemfile:
+  - gemfiles/rails_4.gemfile
+  - gemfiles/rails_5.gemfile
+
+matrix:
+  exclude:
+  - rvm: 2.1.8
+    gemfile: gemfiles/rails_5.gemfile
+
 script: "bundle exec rspec"
