--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,21 @@ rvm:
   - 2.1.8
   - 2.2.4
   - 2.3.0
+  - 2.4.6
+  - 2.5.3
+  - 2.6.3
 
 gemfile:
   - gemfiles/rails_4.gemfile
   - gemfiles/rails_5.gemfile
+  - gemfiles/rails_5_2.gemfile
+
 
 matrix:
   exclude:
   - rvm: 2.1.8
     gemfile: gemfiles/rails_5.gemfile
+  - rvm: 2.1.8
+    gemfile: gemfiles/rails_5_2.gemfile
 
 script: "bundle exec rspec"
