--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ gemfile:
   - gemfiles/rails_5.gemfile
   - gemfiles/rails_5_2.gemfile
 
-
 matrix:
   exclude:
+  - rvm: 2.5.3
+    gemfile: gemfiles/rails_4.gemfile
   - rvm: 2.1.8
     gemfile: gemfiles/rails_5.gemfile
   - rvm: 2.1.8
