--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,30 +15,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby:
-          - 2.7
-          - 2.6
-          - 2.5
-        gemfile:
-          - rails_4.2
-          - rails_5.0
-          - rails_5.1
-          - rails_5_2
-          - rails_6.0
-          - rails_6.1
-        exclude:
-        - gemfile: rails_4.2
-          ruby: 2.7
-        - gemfile: rails_4.2
-          ruby: 3.0
-        - gemfile: rails_5.0
-          ruby: 2.7
-        - gemfile: rails_5.0
-          ruby: 3.0
-        - gemfile: rails_5.1
-          ruby: 2.7
-        - gemfile: rails_5.1
-          ruby: 3.0
+        gemfile: ["rails_7.0"]
+        ruby: [2.7]
+        include:
+          - gemfile: rails_7.0
+            ruby: '3.0'
+          - gemfile: rails_6.1
+            ruby: '3.0'
+          - gemfile: rails_6.1
+            ruby: 2.7
+          - gemfile: rails_6.1
+            ruby: 2.6
+          - gemfile: rails_6.0
+            ruby: 2.7
+          - gemfile: rails_6.0
+            ruby: 2.6
+          - gemfile: rails_5.2
+            ruby: 2.6
+          - gemfile: rails_5.1
+            ruby: 2.6
+          - gemfile: rails_5.0
+            ruby: 2.6
+          - gemfile: rails_4.2
+            ruby: 2.6
+          - gemfile: rails_4.2
+            ruby: 2.5
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
