run on schedule

--- a/.github/workflows/rubocop-challenger.yml
+++ b/.github/workflows/rubocop-challenger.yml
@@ -1,8 +1,8 @@
 name: "RuboCop Challenge"
 
-on: [push]
-  #schedule:
-  #  - cron: '30 23 * * 2,3,4' # この設定の場合、火水木のAM8:30に自動でPRが作られます。
+on:
+  schedule:
+    - cron: '30 23 * * 2,3,4' # この設定の場合、火水木のAM8:30に自動でPRが作られます。
 
 jobs:
   create-pr:
