--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,10 @@ jobs:
         ruby: [2.7]
         include:
           - gemfile: rails_7.0
+            ruby: '3.1'
+          - gemfile: rails_6.1
+            ruby: '3.1'
+          - gemfile: rails_7.0
             ruby: '3.0'
           - gemfile: rails_6.1
             ruby: '3.0'
