rubocop fix: trailing commas in hash/array

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,11 @@ AllCops:
     - '*.gemspec'
     - 'Gemfile'
 
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
 Style/Lambda:
   Enabled: false
 
