--- a/.github/workflows/rubocop-challenger.yml
+++ b/.github/workflows/rubocop-challenger.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Create RuboCop challenge pull request
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bundle exec rubocop_challenger go --base-branch=master --email=rubocop-challenger@example.com --name="Rubocop Challenger"
+        run: bundle exec rubocop_challenger go --base-branch=master --email=rubocop@payrollhero.com --name="Rubocop Challenger" --mode=random
