--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,10 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on:
+      - ubuntu-18.04
+      - ubuntu-20.04
+      - ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
