specify config file
Preventing to catch all files coming from dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,5 +57,5 @@ jobs:
         bundler-cache: true
     - name: RSpec and Rubocop
       run: |
-        bundle exec rubocop
+        bundle exec rubocop -c .rubocop.yml
         bundle exec rspec
