ignore all of vendor/bundle where gems gets installed on Github Actions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
   Exclude:
     - '*.gemspec'
     - 'Gemfile'
+    - vendor/bundle/ruby/**/*
 
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: consistent_comma
