add ignores for BlockLength on commonly long rspec methods

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -68,3 +68,10 @@ Metrics/AbcSize:
     conditions.
   Enabled: true
   Max: 30
+
+Metrics/BlockLength:
+  Max: 25
+  IgnoredMethods:
+    - context
+    - describe
+    - define
