run rubocop on CI (#57)
* run rubocop on CI

* specify config file 

Preventing to catch all files coming from dependencies

* ignore all of vendor/bundle where gems gets installed on Github Actions

* add ignores for BlockLength on commonly long rspec methods

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
   Exclude:
     - '*.gemspec'
     - 'Gemfile'
+    - vendor/bundle/ruby/**/*
 
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: consistent_comma
@@ -67,3 +68,10 @@ Metrics/AbcSize:
     conditions.
   Enabled: true
   Max: 30
+
+Metrics/BlockLength:
+  Max: 25
+  IgnoredMethods:
+    - context
+    - describe
+    - define
