--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - run: bundle exec rake
+    - name: RSpec and Rubocop
+      run: |
+        bundle exec rubocop -c .rubocop.yml
+        bundle exec rspec
