ignore this rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,10 @@ AllCops:
     - 'Gemfile'
     - vendor/bundle/ruby/**/*
 
+Lint/NonDeterministicRequireOrder:
+  Exclude:
+    - spec/spec_helper.rb
+
 RSpec/NotToNot:
   SupportedStyles: to_not
   Enabled: false
