--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,7 @@ Lint/NonDeterministicRequireOrder:
 
 RSpec/NotToNot:
   SupportedStyles: to_not
+  # disable because an error is being raised
   Enabled: false
 
 Style/TrailingCommaInArrayLiteral:
