--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,19 +17,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gemfile: ["rails_7.0"]
-        ruby: [2.7]
+        gemfile: ['rails_7.0', 'rails_7.1']
+        ruby: [3.3, 3.2, 3.1, '3.0', 2.7]
         include:
-          - gemfile: rails_7.0
-            ruby: '3.1'
-          - gemfile: rails_6.1
-            ruby: '3.1'
-          - gemfile: rails_7.0
-            ruby: '3.0'
-          - gemfile: rails_6.1
-            ruby: '3.0'
-          - gemfile: rails_6.1
-            ruby: 2.7
           - gemfile: rails_6.1
             ruby: 2.6
           - gemfile: rails_6.0
