Support for Rails 7.1 (#111)
* allow rails 7.1

* Update ci.yml

* Create rails_7.1.gemfile

* Update version.rb

* update rubocop file

* dev branch of active_attr

* bye bye ruby 2.6

* updte rubocop

* bye bye rails 4.2

* oups

* we need this

* one was missing

* fix version check

* ruby 3.0 only for rails 7.1

* rails 7.1 on ruby 3.1+ only

* used released active_attr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,33 +17,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gemfile: ["rails_7.0"]
-        ruby: [2.7]
+        gemfile: ['rails_7.0', 'rails_7.1']
+        ruby: [3.3, 3.2, 3.1]
         include:
           - gemfile: rails_7.0
-            ruby: '3.1'
-          - gemfile: rails_6.1
-            ruby: '3.1'
+            ruby: '3.0'
           - gemfile: rails_7.0
-            ruby: '3.0'
-          - gemfile: rails_6.1
-            ruby: '3.0'
-          - gemfile: rails_6.1
             ruby: 2.7
           - gemfile: rails_6.1
-            ruby: 2.6
-          - gemfile: rails_6.0
             ruby: 2.7
           - gemfile: rails_6.0
-            ruby: 2.6
+            ruby: 2.7
           - gemfile: rails_5.2
-            ruby: 2.6
+            ruby: 2.7
           - gemfile: rails_5.1
-            ruby: 2.6
+            ruby: 2.7
           - gemfile: rails_5.0
-            ruby: 2.6
-          - gemfile: rails_4.2
-            ruby: 2.6
+            ruby: 2.7
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
