--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gemfile: ['rails_7.0', 'rails_7.1']
+        gemfile: ['rails_7.0', 'rails_7.1', 'rails_7.2']
         ruby: [3.3, 3.2, 3.1]
         include:
           - gemfile: rails_7.0
